kube/cache_layer/varnish-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish-cache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: varnish-cache
  template:
    metadata:
      labels:
        app: varnish-cache
    spec:
      containers:
      - name: cache
        resources:
          requests:
            # We'll use Ten Mb for each varnish cache
            memory: 10Mi
        image: brendanburns/varnish
        command:
        - varnishd
        - -F
        - -f
        - /etc/varnish-config/default.vcl
        - -a
        - 0.0.0.0:8080
        - -s
        # This memory allocation should match the memory request above
        - malloc,10M
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: varnish
          mountPath: /etc/varnish-config
      volumes:
      - name: varnish
        configMap:
          name: varnish-config
